--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,15 @@
+*{
+  color: azure;
+  font-family: Sofia Pro;  
+}
+
+h1{
+  font-size: 38px;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  margin: 0px;
+  background: rgb(36, 40, 47);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +17,117 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.head{
+  background: rgb(36, 40, 47);
+  width: 98%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+  box-shadow: rgb(0 0 0 / 10%) 0px 4px 6px -1px, rgb(0 0 0 / 6%) 0px 2px 4px -1px;
+  position: fixed;
+}
+
+.container{
+  background: rgb(36, 40, 47);
+  padding: 10px;
+  margin-top: 0px;
+}
+
+.card{
+  width: 600px;
+  height: 220px;
+  display: flex;
+  overflow: hidden;
+  background: rgb(60, 62, 68);
+  border-radius: 0.5rem;
+  margin: 0.75rem;
+  box-shadow: rgb(0 0 0 / 10%) 0px 4px 6px -1px, rgb(0 0 0 / 6%) 0px 2px 4px -1px;
+}
+.card h2{
+  color: azure;
+  padding-bottom: 15px;
+}
+
+.card p{
+  color: azure;
+}
+
+.card_container{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  max-width: 1920px;
+}
+
+input{
+  color: #FFEEFF;
+  width: 100%;
+  border:yellowgreen;
+  border-radius: 7px;
+  background-color: #302F40;
+  font-size: 1.3 rem;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+.paginator{
+  display: flex;
+  margin-top: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
+.paginator button{
+  background-color: blue;
+  border-radius: 5px;
+  border-style: none;
+  font-size: 20px;
+  height: 45px;
+  width: 70px;
+  margin: 10px;
+  -webkit-box-shadow: 0px 0px 15px 5px rgba(39,88,255,0.22); 
+box-shadow: 0px 0px 15px 5px rgba(39,88,255,0.22);
+}
+
+.filter{
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 130px;
+}
+
+.filter button{
+  background-color: blue;
+  border-radius: 5px;
+  border-style: none;
+  font-size: 20px;
+  height: 45px;
+  min-width: 70px;
+  margin: 10px;
+  -webkit-box-shadow: 0px 0px 15px 5px rgba(39,88,255,0.22); 
+  box-shadow: 0px 0px 15px 5px rgba(39,88,255,0.22);
+}
+
+@media (max-width: 720px){
+
+  .head{
+    height: 90px;
+  }
+  
+  
+  .card{
+    flex-direction: column;
+    height: initial;
+  }
+  .card img{
+    height: 300px;
+  }
+  .card_content{
+    padding-left: 10px;
+  }
+
+
+
 }
